<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.files</groupId>
    <artifactId>files-sdk</artifactId>
    <version>1.6.33-SNAPSHOT</version>
    <name>Files.com Java SDK</name>
    <description>The Files.com Java client library provides convenient access to the Files.com API from JVM based applications.</description>
    <url>https://github.com/Files-com/files-sdk-java</url>
    <organization>
        <name>com.github.files-com</name>
        <url>https://github.com/Files-com</url>
    </organization>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Files-com/files-sdk-java/issues</url>
    </issueManagement>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/Files-com/files-sdk-java/blob/master/LICENSE</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Files.com Open Source Bot</name>
            <url>https://github.com/files-opensource-bot</url>
        </developer>
        <developer>
            <name>Files.com Developers</name>
            <url>https://github.com/Files-com/files-sdk-java/blob/master/CONTRIBUTORS</url>
        </developer>
    </developers>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <localCheckout>true</localCheckout>
                    <pushChanges>false</pushChanges>
                    <mavenExecutorId>forked-path</mavenExecutorId>
                    <arguments>-DskipTests -Dgpg.passphrase=${env.MAVEN_CENTRAL_GPG_PASSPHRASE}</arguments>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.scm</groupId>
                        <artifactId>maven-scm-provider-gitexe</artifactId>
                        <version>1.9.5</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>4.42.0</version>
                <configuration>
                    <activeRecipes>
                        <recipe>org.openrewrite.java.cleanup.Cleanup</recipe>
                        <recipe>org.openrewrite.java.format.Spaces</recipe>
                    </activeRecipes>
                    <checkstyleConfigFile>config/checkstyle/checkstyle.xml</checkstyleConfigFile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                  <configLocation>config/checkstyle/checkstyle.xml</configLocation>
                  <encoding>UTF-8</encoding>
                  <consoleOutput>true</consoleOutput>
                  <failsOnError>true</failsOnError>
                  <linkXRef>false</linkXRef>
                </configuration>
              </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <properties>
        <jackson.version>2.16.0</jackson.version>
        <log4j.version>2.19.0</log4j.version>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.14</version> <!-- Use the latest version compatible with Java 8 -->
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.4.15</version> <!-- Is not synced to httpclient version -->
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.5.14</version> <!-- Ensure the version matches httpclient -->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <!-- Test Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-jre8</artifactId>
            <version>2.35.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <keyname>${env.MAVEN_CENTRAL_GPG_KEYNAME}</keyname>
                                    <passphraseServerId>${env.MAVEN_CENTRAL_GPG_KEYNAME}</passphraseServerId>
                                    <gpgArguments>
                                        <arg>--no-tty</arg>
                                        <arg>--batch</arg>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                        <arg>--passphrase</arg>
                                        <arg>${env.MAVEN_CENTRAL_GPG_KEYNAME}</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <scm>
        <connection>scm:git:git://github.com/Files-com/files-sdk-java.git</connection>
        <developerConnection>scm:git:git@github.com:Files-com/files-sdk-java.git</developerConnection>
        <url>https://github.com/Files-com/files-sdk-java</url>
        <tag>HEAD</tag>
    </scm>
</project>
